# platform.packages.modules.Virtualization

./: OWNERS  PREUPLOAD.cfg  TEST_MAPPING
android/LinuxInstaller/: Android.bp  generate_assets.sh  linux_vm_setup.rc  linux_vm_setup.sh  vm_config.json
android/TerminalApp/: Android.bp  AndroidManifest.xml  generate_assets.sh  linux_vm_setup.rc  proguard.flags
android/VmLauncherApp/: proguard.flags
android/android.system.virtualmachine.res/: Android.bp  AndroidManifest.xml
android/compos_verify/: verify.rs
android/composd_cmd/: composd_cmd.rs
android/forwarder_host/: Android.bp
android/virtmgr/: Android.bp
android/virtualizationservice/: Android.bp
android/vm/: vm_shell.sh
android/vm_demo_native/: main.cpp
apkverify/src/: lib.rs
authfs/src/: fsverity.rs
compos/composd/: Android.bp
compos/verify_key/: Android.bp
docs/: custom_vm.md  early_vm.md  getting_started.md  mainline_module_payload.md  microdroid_vendor_modules.md  pvm_dice_chain.md  service_vm.md  vm_remote_attestation.md
docs/debug/: README.md
guest/apkdmverity/: Android.bp
guest/authfs/: Android.bp
guest/compos_key_helper/: Android.bp
guest/derive_microdroid_vendor_dice_node/: Android.bp
guest/forwarder_guest/: Cargo.toml
guest/forwarder_guest_launcher/: Cargo.toml  build.rs
guest/forwarder_guest_launcher/.cargo/: config.toml
guest/forwarder_guest_launcher/debian/: service
guest/forwarder_guest_launcher/src/: main.rs
guest/ip_addr_reporter/: Cargo.toml  build.rs
guest/ip_addr_reporter/src/: main.rs
guest/kernel/: Android.bp
guest/microdroid_launcher/: Android.bp  main.cpp
guest/microdroid_manager/: Android.bp  microdroid_manager.rc
guest/pvmfw/: Android.bp  README.md  platform.dts
guest/rialto/: Android.bp
guest/shutdown_runner/: Cargo.toml
guest/shutdown_runner/debian/: service
guest/shutdown_runner/src/: main.rs
guest/storage_balloon_agent/: Cargo.toml  rustfmt.toml
guest/vmbase_example/: Android.bp
libs/apexutil/: Android.bp
libs/apkverify/: Android.bp
libs/apkzip/: Android.bp
libs/cstr/: rules.mk
libs/debian_service/: Android.bp
libs/devicemapper/: Android.bp
libs/dice/: TEST_MAPPING
libs/fdtpci/: Android.bp
libs/framework-virtualization/: Android.bp  README.md
libs/libavf/: Android.bp  (+1 more)
(+570 files in other folders)
