[package]
name = "forwarder_guest_launcher"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
env_logger = "0.11.5"
futures = "0.3.31"
listeners = "0.2.1"
log = "0.4.22"
prost = "0.13.3"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.40.0", features = ["process", "rt-multi-thread"] }
tonic = "0.12.3"
vsock = "0.5.1"

[build-dependencies]
tonic-build = "0.12.3"
