[package]
name = "ip_addr_reporter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
netdev = "0.31.0"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
